# PAM

./: .gitignore  CLAUDE.md  backlog.md  cli.py  config.py  decisions.md  glossary.md  pyproject.toml  review_inventory.txt
.github/: copilot-instructions.md
audits/: 2026-05-06_17-55-32_audit.md  2026-05-19_12-29-00_top-to-bottom-audit.md  2026-05-20_10-46-03_docs-product-drift-audit.md
docs/: ARCHITECTURE.md  AUDIT_2026-05-06.md  BACKLOG.md  CODE_INDEX.md  DEPENDABILITY_PLAN.md  DOCUMENTATION_COVERAGE.md  EVAL_REGRESSION_RERUN_2026-05-07.md  EVAL_RESULTS_2026-05-06.md  EVAL_RESULTS_2026-05-07.md  EVAL_SUITES.md  EXPLORATORY_EVALUATION.md  FLOWS.md  HYBRID_RETRIEVAL_PLAN.md  MODULE_CLI.md  MODULE_DB.md  MODULE_INGESTION.md  MODULE_LIFECYCLE.md  MODULE_RETRIEVAL.md  MODULE_ROOT.md  README.md  REPOSITORY_ARTIFACTS.md  RETRIEVAL_RELATIONS_PLAN.md  TESTING.md
pam/: __init__.py  agent_interface.py  chat_agent.py  embeddings.py  feedback.py  lifecycle.py  llm_clients.py  relations.py  telemetry.py
pam/db/: edges.py  (+5 more)
scripts/: diag_relationship_misses.py  run_all_copilot_evals.py  run_copilot_cli_eval.py
test_findings/: 2026-05-06_21-51-09_eval-results.md  2026-05-07_02-25-30_eval-regression-rerun.md  2026-05-07_17-30-56_eval-results.md  2026-05-08_17-37-11_eval-full-pass.md  2026-05-08_21-59-09_irl-expanded-gate-baseline.md  2026-05-09_02-02-20_phase-a1-irl-lift.md  2026-05-11_14-08-11_a2-cell0-triage.md  2026-05-11_19-42-34_a2-topk-bump.md  2026-05-12_22-30-00_a2-close.md  2026-05-13_13-27-00_detailed-residual-triage.md  2026-05-13_17-00-00_f3-derived-from-attempt.md  (+3 more)
(+39 files in other folders)
