[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pam"
version = "0.1.0"
description = "Personal Agent Memory - local-first SQLite-backed memory layer for the kayo Copilot-CLI assistant"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.40",
    "openai>=1.50",
]
fuzzy = [
    "rapidfuzz>=3.9",
]
dev = [
    "pytest>=8.0",
    "anthropic>=0.40",
    "openai>=1.50",
    "rapidfuzz>=3.9",
]

[project.scripts]
pam = "cli:main"

[tool.setuptools]
py-modules = ["cli", "config"]

[tool.setuptools.packages.find]
include = ["pam*"]
exclude = ["tests*", "scripts*", "docs*", ".tmp_manual_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
